2003-09-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: Handle Legacy's method of
	handling separations and divorces

2003-09-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: set z-index properly for paths
	so they appear over text, fix font for draw_text
	* src/docgen/OpenDrawDoc.py: deleted, superceded by OpenofficeDoc.py

2003-09-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/WriteGedcom.py (cl_setup): Define newline char.
	* src/plugins/WriteFtree.py: Provide command line interface. 
	* src/gramps_main.py (handle_args): Add function. Add WFT export 
	format; (cl_export): Add WFT format. 
	* doc/gramps.1.in: Update man page to reflect new format option. 
	* doc/gramps.1: Likewise. 
	* NEWS: Likewise. 
	* TODO: Add recently discussed items from gramps-devel.  
	* gramps.sh.in: Fix bashism to have a valid bourne-shell script. 
	* src/plugins/Makefile.am: Ship writefree.glade.
	* src/plugins/Makefile.in: Likewise.

	* src/gramps_main.py (on_save_as_activate): Make dialog modal and 
	transient; (on_open_activate): likewise; (on_new_clicked): pass 
	main window to set the transient. 
	* src/gramps.glade (fileselection dialog): Remove auto_estroy and modal.
	* src/revision.glade (dbopen dialog): Add modal and set responses.
	* src/docgen/Makefile.am: Don't ship OpenDrawDoc.py anymore.
	* src/docgen/Makefile.in: Likewise.

2003-09-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SourceView.py (button_press,on_add_clicked,on_delete_clicked,
	on_edit_clicked): Pass parent window to the child dialog. 
	* src/Sources.py (add_src_clicked): Likewise. 
	* src/EditSource.py (__init__): Add optional parent_window argument.
	Make dialog modal and transient for its parent. 
	* src/gramps.glade (sourceEditor dialog): Delete unneeded handlers 
	for buttons. 
	* src/QuestionDialog.py (SaveDialog,QuestionDialog,OptionDialog,
	ErrorDialog,WarningDialog,MissingMediaDialog): Set transient status 